# sdl3_vulkan_flecs

./: CMakeLists.txt  LICENSE  README.md  build.bat  devguide.md  flecs_context.md  run.bat  script.lua  sdl_vulkan_flecs_api.md  shader.bat  shaderh.bat
docs/: README.md  base_shader.md  cube.md  cube3d.md  cubetexture3d.md  flecs_module.md  main_tests.md  resize_swap_chain.md  sdl.md  sdl_vulkan_flecs_design.md  sdl_vulkan_flecs_module.md  text.md  text_descriptor_pool_setup.md  texture2d.md  triangle_module_2d.md  vulkan.md
examples/: flecs_test.c
include/: flecs_assets3d.h  flecs_assimp.h  flecs_cube3d.h  flecs_cubetexture3d.h  flecs_imgui.h  flecs_luajit.h  flecs_sdl.h  flecs_text.h  flecs_texture2d.h  flecs_triangle2d.h  flecs_types.h  flecs_utils.h  flecs_vulkan.h  frag.spv.h  text_vert.spv.h  vert.spv.h
include/shaders/: assets3d_shader3d_frag.spv.h  assets3d_shader3d_vert.spv.h  assimp_shader3d_frag.spv.h  assimp_shader3d_vert.spv.h  cube3d_frag.spv.h  cube3d_vert.spv.h  cubetexture3d_frag.spv.h  cubetexture3d_vert.spv.h  shader2d_frag.spv.h  shader2d_vert.spv.h  text_frag.spv.h  texture2d_frag.spv.h  texture2d_vert.spv.h
shaders/: README.md  assets3d_shader3d_frag.frag  assets3d_shader3d_vert.vert  cube3d.vert  cubetexture3d.frag  cubetexture3d.vert  shader2d.vert  text.frag  text.vert  texture2d.frag
src/: flecs_assets3d.c  flecs_assimp.c  flecs_cube3d.c  flecs_cubetexture3d.c  flecs_imgui.c  flecs_luajit.c  flecs_sdl.c  flecs_text.c  flecs_texture2d.c  flecs_triangle2d.c  flecs_types.c  flecs_vulkan.c  main.c  test.c
